--- a/julia/problem_041.ipynb
+++ b/julia/problem_041.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Primes, BenchmarkTools"
+    "using Primes, BenchmarkTools\n",
+    "include(\"./euler.jl\");"
    ]
   },
   {
@@ -50,16 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "07dd188b",
+   "id": "a15c752a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  9.002 s (100502912 allocations: 12.96 GiB)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -71,7 +65,39 @@
     }
    ],
    "source": [
-    "@btime maximum(filter(ispandigital, primes(987654321)))"
+    "maximum(filter(ispandigital, primes(987654321)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "07dd188b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
+       " Single result which took \u001b[34m8.085 s\u001b[39m (5.01% GC) to evaluate,\n",
+       " with a memory estimate of \u001b[33m12.96 GiB\u001b[39m, over \u001b[33m201005820\u001b[39m allocations."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = @benchmark maximum(filter(ispandigital, primes(987654321)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "255b1dff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "euler.save_benchmark(41, b);"
    ]
   },
   {
@@ -84,17 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0229cb45",
+   "execution_count": 6,
+   "id": "7101c2e5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  9.034 s (100502912 allocations: 12.96 GiB)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -106,7 +125,39 @@
     }
    ],
    "source": [
-    "@btime last(filter(ispandigital, primes(987654321)))"
+    "last(filter(ispandigital, primes(987654321)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0229cb45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
+       " Single result which took \u001b[34m8.506 s\u001b[39m (5.87% GC) to evaluate,\n",
+       " with a memory estimate of \u001b[33m12.96 GiB\u001b[39m, over \u001b[33m201005820\u001b[39m allocations."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = @benchmark last(filter(ispandigital, primes(987654321)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3da2229f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "euler.save_benchmark(41, b);"
    ]
   },
   {
@@ -119,17 +170,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c3f0af80",
+   "execution_count": 9,
+   "id": "c85b18da",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  9.011 s (100502909 allocations: 12.58 GiB)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -141,7 +185,39 @@
     }
    ],
    "source": [
-    "@btime maximum(p for p in primes(987654321) if ispandigital(p))"
+    "maximum(p for p in primes(987654321) if ispandigital(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c3f0af80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
+       " Single result which took \u001b[34m8.674 s\u001b[39m (6.15% GC) to evaluate,\n",
+       " with a memory estimate of \u001b[33m12.58 GiB\u001b[39m, over \u001b[33m201005815\u001b[39m allocations."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = @benchmark maximum(p for p in primes(987654321) if ispandigital(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d0872d7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "euler.save_benchmark(41, b);"
    ]
   },
   {
@@ -154,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "4d05efec",
    "metadata": {},
    "outputs": [
@@ -178,17 +254,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c90443ae",
+   "execution_count": 13,
+   "id": "5a18a903",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  8.906 s (99467137 allocations: 12.85 GiB)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -200,21 +269,53 @@
     }
    ],
    "source": [
-    "@btime firsttrue(ispandigital, reverse(primes(987654321)))"
+    "firsttrue(ispandigital, reverse(primes(987654321)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c90443ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
+       " Single result which took \u001b[34m8.519 s\u001b[39m (6.08% GC) to evaluate,\n",
+       " with a memory estimate of \u001b[33m12.85 GiB\u001b[39m, over \u001b[33m198934270\u001b[39m allocations."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = @benchmark firsttrue(ispandigital, reverse(primes(987654321)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "604fdd5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "euler.save_benchmark(41, b);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.5",
+   "display_name": "Julia 1.11.0",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.5"
+   "version": "1.11.0"
   }
  },
  "nbformat": 4,
