--- a/python/problem_012.ipynb
+++ b/python/problem_012.ipynb
@@ -12,6 +12,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "325945ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "81c2912c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b9481546",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3a963707",
    "metadata": {},
    "outputs": [],
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "70462b22",
    "metadata": {},
    "outputs": [],
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f12e2264",
    "metadata": {},
    "outputs": [],
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9d585b52",
    "metadata": {},
    "outputs": [],
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6e675e57",
    "metadata": {},
    "outputs": [],
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "90451dd1",
    "metadata": {},
    "outputs": [],
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d415415a",
    "metadata": {},
    "outputs": [
@@ -127,7 +137,7 @@
        "76576500"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7d2ebc28",
    "metadata": {},
    "outputs": [
@@ -146,12 +156,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2h 11min 7s ± 36.4 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2h 11min 10s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit divisors(500)"
+    "t = %timeit -o -n1 -r1 divisors(500)\n",
+    "euler.save_benchmark(12, t)"
    ]
   }
  ],
