--- a/julia/problem_001.ipynb
+++ b/julia/problem_001.ipynb
@@ -5,35 +5,50 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 1\n",
+    "# Problem 1\n",
     "https://projecteuler.net/problem=1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d8e497fa",
+   "id": "5bb6cf2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
     "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", VERSION)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "60a2c0c6",
+   "id": "0e440f1a",
    "metadata": {},
    "source": [
-    "#### Solution 1"
+    "### Solution 1 (union)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7d8eabe",
+   "id": "8d1372fa",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  5.826 μs (21 allocations: 20.03 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -45,28 +60,34 @@
     }
    ],
    "source": [
-    "sum(union(3:3:999, 5:5:999))"
+    "@btime sum(union(3:3:999, 5:5:999))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3171befe",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (list comprehension)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7d2ebc28",
+   "id": "725c3404",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  628.409 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 5 evaluations.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m6.017 μs\u001b[22m\u001b[39m … \u001b[35m 3.271 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 0.00% … 99.58%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m7.942 μs              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m9.203 μs\u001b[22m\u001b[39m ± \u001b[32m39.596 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m12.58% ±  5.36%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▁\u001b[39m▃\u001b[39m▆\u001b[39m█\u001b[34m▄\u001b[39m\u001b[39m▃\u001b[39m▃\u001b[39m▅\u001b[39m▂\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▁\u001b[39m▁\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▅\u001b[39m▆\u001b[39m▇\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▄\u001b[39m▄\u001b[39m▄\u001b[39m▄\u001b[39m▃\u001b[32m▂\u001b[39m\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m \u001b[39m▃\n",
-       "  6.02 μs\u001b[90m        Histogram: frequency by time\u001b[39m        12.4 μs \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m20.03 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m21\u001b[39m."
+       "233168"
       ]
      },
      "metadata": {},
@@ -74,33 +95,65 @@
     }
    ],
    "source": [
-    "b = @benchmark sum(union(3:3:999, 5:5:999))"
+    "@btime sum(n for n in 3:999 if n%3 == 0 || n%5 == 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "763b8ad0",
+   "metadata": {},
+   "source": [
+    "### Solution 3 (conditional sum)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "066e6afa",
+   "id": "1e5a8101",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.496 μs (6 allocations: 11.75 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "233168"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "euler.save_benchmark(1, b);"
+    "@btime sum(filter(n -> n%3 == 0 || n%5 == 0, 3:999))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "47cdee21",
+   "id": "ab4a376c",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "### Solution 4 (ternary)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5eef1724",
+   "id": "426f1bb3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  669.304 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -112,62 +165,30 @@
     }
    ],
    "source": [
-    "sum(n for n in 1:999 if (n%3 == 0) || (n%5 == 0))"
+    "@btime sum(n -> n%3 == 0 || n%5 == 0 ? n : 0, 3:999)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d681d61",
+   "metadata": {},
+   "source": [
+    "### Solution 5 (function)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a6ee7d9d",
+   "id": "d8e497fa",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 10 evaluations.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m1.521 μs\u001b[22m\u001b[39m … \u001b[35m  8.908 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m1.708 μs               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m1.667 μs\u001b[22m\u001b[39m ± \u001b[32m201.260 ns\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m0.00% ± 0.00%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m \u001b[39m█\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[34m▆\u001b[39m\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▂\u001b[39m▄\u001b[39m█\u001b[39m▄\u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▆\u001b[39m▆\u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▂\u001b[32m▂\u001b[39m\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m▅\u001b[39m▄\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▃\u001b[39m▂\u001b[39m \u001b[39m▃\n",
-       "  1.52 μs\u001b[90m         Histogram: frequency by time\u001b[39m        1.85 μs \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m0 bytes\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m0\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark sum(n for n in 1:999 if (n%3 == 0) || (n%5 == 0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "bd2478b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(1, b);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "df37c791",
-   "metadata": {},
-   "source": [
-    "#### Solution 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f4d551de",
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  628.924 ns (0 allocations: 0 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -179,52 +200,41 @@
     }
    ],
    "source": [
-    "sum(n -> n%3 == 0 || n%5 == 0 ? n : 0, 1:999)"
+    "function f()\n",
+    "    s = 0\n",
+    "    for n ∈ 3:999\n",
+    "        (n%3 == 0 || n%5 == 0) && (s += n)\n",
+    "    end\n",
+    "    return s\n",
+    "end\n",
+    "\n",
+    "@btime f()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "71d32486",
+   "cell_type": "markdown",
+   "id": "5507ba25",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 147 evaluations.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m694.163 ns\u001b[22m\u001b[39m … \u001b[35m 2.522 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m776.361 ns              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m795.396 ns\u001b[22m\u001b[39m ± \u001b[32m57.393 ns\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m0.00% ± 0.00%\n",
-       "\n",
-       "  \u001b[39m▃\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▅\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m█\u001b[34m▂\u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▇\u001b[39m▂\u001b[39m▁\u001b[39m \u001b[39m▂\u001b[39m▂\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\n",
-       "  \u001b[39m█\u001b[39m▄\u001b[39m▁\u001b[39m▁\u001b[39m▇\u001b[39m▃\u001b[39m█\u001b[39m▆\u001b[39m▅\u001b[39m▆\u001b[39m▅\u001b[39m█\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[32m▆\u001b[39m\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▆\u001b[39m▆\u001b[39m▇\u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▆\u001b[39m▇\u001b[39m▆\u001b[39m▆\u001b[39m▇\u001b[39m▇\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m \u001b[39m█\n",
-       "  694 ns\u001b[90m        \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m       932 ns \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m0 bytes\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m0\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark sum(n -> n%3 == 0 || n%5 == 0 ? n : 0, 1:999)"
+    "### Save best performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "37460173",
+   "execution_count": 7,
+   "id": "066e6afa",
    "metadata": {},
    "outputs": [],
    "source": [
+    "include(\"./euler.jl\")\n",
+    "b = @benchmark sum(n for n in 3:999 if n%3 == 0 || n%5 == 0) samples=5\n",
     "euler.save_benchmark(1, b);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -232,7 +242,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
